# FlexiAI

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CIRCUIT_BREAKER_GUIDE.md  CIRCUIT_BREAKER_INDEX.md  CIRCUIT_BREAKER_QUICK_REF.md  CIRCUIT_BREAKER_TESTING.md  CLAUDE_TEST_REPORT.md  CONTRIBUTING.md  CREDENTIALS_README.md  FASTAPI_QUICKSTART.md  Instructions.md  LICENSE  MANIFEST.in  MULTIWORKER_TEST.md  MULTI_WORKER_REDIS_SYNC_VERIFICATION.md  PHASE1_COMPLETE.md  PHASE2_PROGRESS.md  PHASE_1.10_COMPLETE.md  PHASE_1.11_COMPLETE.md  PHASE_1.11_PLAN.md  PHASE_7_1_SUMMARY.md  PHASE_7_2_PLAN.md  PHASE_7_TESTING_RESULTS.md  PRIMARY_FAILBACK_GUIDE.md  README.md  RELEASE_PROCESS.md  RELEASE_v0.3.0.md  SECURITY.md  TESTING.md  TODO.md  example_real_api.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.githooks/: block-service-accounts.sh  check-env-files.sh  detect-api-keys.sh
.github/workflows/: publish.yml  tests.yml
docs/: api-reference.md  architecture.md  claude-api-research.md  configuration.md  multi-worker-deployment.md  multi_worker_deployment.md  production_best_practices.md
docs/examples/: README.md
examples/: circuit_breaker_test.py  claude_basic.py  decorator_advanced.py  decorator_async.py  decorator_basic.py  gemini_basic.py  minimal_test_service_account.py  minimal_vertexai_test.py  multi_provider_failover.py  test_gemini_with_api_key.py  test_vertexai.py  test_vertexai_service_account.py  test_vertexai_with_api_key.py  three_provider_failover.py  vertexai_basic.py
examples/fastapi_multiworker/: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
flexiai/: __init__.py  client.py  config.py  decorators.py  exceptions.py  models.py
flexiai/circuit_breaker/: __init__.py  breaker.py  state.py
flexiai/normalizers/: __init__.py  request.py  response.py
flexiai/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  registry.py  vertexai_provider.py
flexiai/sync/: __init__.py  base.py  events.py  manager.py  memory_backend.py  redis_backend.py  serializers.py
flexiai/utils/: __init__.py  logger.py  validators.py
tests/: __init__.py  test_sync_events.py  test_sync_manager.py  test_sync_memory_backend.py  test_sync_serializers.py
tests/e2e/: __init__.py
tests/integration/: README.md  __init__.py  conftest.py  multiworker_comprehensive_test_script.py  test_circuit_breaker_sync.py  test_client.py  test_gemini_integration.py  test_multiworker_fastapi.py  test_openai_integration.py  test_redis_multiworker.py  test_vertexai_integration.py
tests/unit/: __init__.py  test_anthropic_provider.py  test_base_provider.py  test_circuit_breaker.py  test_claude_request_normalizer.py  test_claude_response_normalizer.py  test_client.py  test_config.py  test_decorators.py  test_edge_cases.py  test_exceptions.py  test_gemini_normalizers.py  test_gemini_provider.py  test_logger.py  test_models.py  test_openai_provider.py  (+5 more)
